--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# name application
+spring.application.name=clientesApi
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/bdProjetoArqui
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.error.include-stacktrace=never 
+spring.jpa.properties.hibernate.format_sql=true
