--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never 
 spring.jpa.properties.hibernate.format_sql=true
+
+#MongoDB
+#data source mongodb
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=projetoArqFinalCliente
