Implementando RabbitmQ e correção de algumas classes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,15 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=projetoArqFinalCliente
+
+#rabbitmq
+spring.rabbitmq.addresses=amqps://noctonaf:QT3Td7SOXC8K2BP9rP50o9F84zzUVXMn@fish.rmq.cloudamqp.com/noctonaf
+queue.name=mensagens_cliente
+
+#spring mail
+spring.mail.host=smtp-mail.outlook.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USUARIO}
+spring.mail.password=${EMAIL_SENHA}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
