--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "queue.name",
-  "type": "java.lang.String",
-  "description": "A description for 'queue.name'"
-}]}
+{"properties": [
+  {
+    "name": "queue.name",
+    "type": "java.lang.String",
+    "description": "A description for 'queue.name'"
+  },
+  {
+    "name": "urlExterna",
+    "type": "java.lang.String",
+    "description": "A description for 'urlExterna'"
+  }
+]}
