Implementando Actuator na API.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.mail.username=${EMAIL_USUARIO}
 spring.mail.password=${EMAIL_SENHA}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Monitoramento
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=ALWAYS
+management.health.diskspace.enabled=false
