--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,10 @@
     "name": "urlExterna",
     "type": "java.lang.String",
     "description": "A description for 'urlExterna'"
+  },
+  {
+    "name": "queue.name",
+    "type": "java.lang.String",
+    "description": "A description for 'queue.name'"
   }
 ]}
