Melhorias na classe do Swagger.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 # name application
 spring.application.name=clientesApi
 
+#Port
+server.port=8080
+
+#PostgreSQL
+#data source
 spring.datasource.url=jdbc:postgresql://localhost:5432/bdProjetoArqui
 spring.datasource.username=postgres
 spring.datasource.password=123456
@@ -10,10 +15,23 @@ server.error.include-stacktrace=never
 spring.jpa.properties.hibernate.format_sql=true
 
 #MongoDB
-#data source mongodb
+#data source
 spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=projetoArqFinalCliente
+
+# Custom
+urlExterna=http://localhost:${server.port}
+
+# Spring Doc
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.docExpansion=none
+springdoc.api-docs.groups.enabled=true
+springdoc.show-actuator=true
+springdoc.swagger-ui.groups-order=ASC
 
 #rabbitmq
 spring.rabbitmq.addresses=amqps://noctonaf:QT3Td7SOXC8K2BP9rP50o9F84zzUVXMn@fish.rmq.cloudamqp.com/noctonaf
