Implementando observabilidade no projeto(prometheus e grafana)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Monitoramento
-management.endpoints.web.exposure.include=health
+management.endpoints.web.exposure.include=health,prometheus
 management.endpoint.health.show-details=ALWAYS
 management.health.diskspace.enabled=false
+management.prometheus.metrics.export.enabled=true
+management.metrics.tags.application=${spring.application.name}
+
